# AquaNote

./: .env  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.dev.ts
.github/workflows/: build-windows.yml  electron.yml  release.yml
electron/: main.cjs  package.json  preload.cjs
src/: App.tsx  index.css  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/common/: RouteGuard.tsx
src/components/deepseek/: DeepSeekKeySetup.tsx
src/components/layouts/: CustomTitleBar.tsx
src/components/modules/: AiReportPanel.tsx  Chronicles.tsx  EnvCheck.tsx  Equipment.tsx  KnowledgeBase.tsx  MaintenanceCalendar.tsx  Organisms.tsx  Parameters.tsx  Supplies.tsx  WaterLab.tsx
src/components/three/: TankWireframe.tsx
src/components/ui/: DeepSeaBg.tsx
src/components/workspace/: AppLaunchOverlay.tsx  CentralArea.tsx  CommandPalette.tsx  DeepSeaEmpty.tsx  LeftNav.tsx  OnboardingAnimation.tsx  RightPanel.tsx  SettingsDialog.tsx  WelcomeIntro.tsx  (+2 more)
src/contexts/: NicknameContext.tsx  ThemeContext.tsx  WorkspaceContext.tsx
src/hooks/: useOnlineStatus.ts  useReducedMotion.ts
src/lib/: aquabot.ts  exportCsv.ts  knowledgeBase.ts  storage.ts  testTemplates.ts
src/pages/: HomePage.tsx  NicknameSetup.tsx  RootPage.tsx  SettingsPage.tsx  WorkspacePage.tsx
src/types/: index.ts
supabase/: schema.sql
supabase/migrations/: 00001_initial_schema.sql  00002_supplies_add_consumption_fields.sql  00003_alter_profiles_add_preferences.sql  00004_create_admin_system.sql
(+2 files in other folders)
